--- a/public/stylesheet/base.css
+++ b/public/stylesheet/base.css
@@ -8,3 +8,8 @@ body {
    background-image: url('/public/image/background/linen.jpg');
    background-repeat: repeat;
 }
+.profile-section {
+   width: 330px;
+   background: #373737;
+   color: #fff;
+}
