--- a/public/stylesheet/base.css
+++ b/public/stylesheet/base.css
@@ -80,9 +80,15 @@ body {
 .p-a-0 {
    padding: 0;
 }
+.m-l-10 {
+   margin-left: 10px;
+}
 .m-l-20 {
    margin-left: 20px;
 }
 .m-t-0 {
    margin-top: 0;
+}
+.m-l-0 {
+   margin-left: 0;
 }
