--- a/public/stylesheet/ckip-client.css
+++ b/public/stylesheet/ckip-client.css
@@ -48,3 +48,8 @@ ul.footer-links li a {
    color: #fff;
    font-size: 13px;
 }
+#footer-commercial {
+   width: 250px;
+   height: 250px;
+   margin: 15px;
+}
