--- a/public/stylesheet/base.css
+++ b/public/stylesheet/base.css
@@ -1,8 +1,8 @@
 body {
    color: #555;
    font-family: 'Helvetica Neue', Arial, Helvetica, 'lucida grande', tahoma, verdana, arial, sans-serif;
-   font-size: 13px;
-   line-height: 1.5em;
+   font-size: 15px;
+   line-height: 1.8em;
    text-transform: inherit;
    background-color: #eee;
    background-image: url('/public/image/background/linen.jpg');
@@ -84,6 +84,10 @@ body {
 .m-h-auto {
   margin-left: auto;
   margin-right: auto;
+}
+.m-v-20 {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 .m-a-15 {
    margin: 15px;
