--- a/public/stylesheet/base.css
+++ b/public/stylesheet/base.css
@@ -75,6 +75,85 @@ body {
    margin: 8px 10px 0 5px;
    float: left;
 }
+.navbar .brand {
+   display: block;
+   float: left;
+   padding: 10px 20px 10px;
+   margin-left: -20px;
+   font-size: 20px;
+   font-weight: 200;
+   color: #777777;
+   text-shadow: 0 1px 0 #ffffff;
+}
+.navbar-inverse .brand, .navbar-inverse .nav > li > a {
+   color: #999999;
+   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+}
+.navbar-inverse .brand {
+   color: #999999;
+}
+body > .navbar .brand {
+   padding-right: 0;
+   padding-left: 0;
+   margin-left: 20px;
+   float: right;
+   font-weight: bold;
+   color: #000;
+   text-shadow: 0 1px 0 rgba(255,255,255,.1), 0 0 30px rgba(255,255,255,.125);
+   -webkit-transition: all .2s linear;
+   -moz-transition: all .2s linear;
+   transition: all .2s linear;
+}
+body {
+   font-size: 15px;
+}
+footer {
+   background: #343131;
+   min-height: 100px;
+   color: #fff;
+}
+#main-content {
+   min-height: 1000px;
+   background-color: #fff;
+   margin-top: 40px;
+}
+ul.footer-links {
+   list-style: none;
+   margin: 0 0 10px 5px;
+}
+ul.footer-links li {
+   color: #fff;
+   line-height: 1.6em;
+}
+ul.footer-links li a {
+   color: #fff;
+   font-size: 1em;
+}
+#footer-commercial {
+   width: 250px;
+   height: 250px;
+   margin: 15px;
+}
+#full-width-commercial {
+   margin: 15px;
+}
+.commercial-box {
+   -webkit-border-radius: 6px;
+   -moz-border-radius: 6px;
+   -ms-border-radius: 6px;
+   -o-border-radius: 6px;
+   border-radius: 6px;
+   background: rgba(255,255,255,0.45);
+   border: 1px solid #c7c7c7;
+   margin: 25px auto;
+   padding: 9px;
+}
+.hero-unit {
+   padding: 40px;
+}
+.hero-unit h1 {
+   font-size: 40px;
+}
 .f-s-40 {
    font-size: 40px;
 }
