--- a/public/stylesheet/base.css
+++ b/public/stylesheet/base.css
@@ -186,6 +186,9 @@ ul.footer-links li a {
 .m-t-0 {
    margin-top: 0px;
 }
+.m-b-10 {
+   margin-bottom: 10px;
+}
 .m-b-0 {
    margin-bottom: 0px;
 }
