--- a/public/stylesheet/show-case.css
+++ b/public/stylesheet/show-case.css
@@ -221,3 +221,48 @@
    -moz-transition: all 0.2s ease-in;
    transition: all 0.2s ease-in;
 }
+
+.active-tool {
+  z-index: 10;
+}
+.active-tool::before {
+  bottom: -1px;
+  margin-left: -7px;
+  border-left: 12px solid transparent;
+  border-right: 12px solid transparent;
+  border-bottom: 12px solid rgba(0,0,0,0.3);
+  -webkit-transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+.active-tool::after {
+  bottom: -1px;
+  margin-left: -6px;
+  border-left: 11px solid transparent;
+  border-right: 11px solid transparent;
+  border-bottom: 11px solid transparent;
+  -webkit-transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+.active-tool img {
+  max-width: 110%;
+  margin-top: -5%;
+  margin-left: -5%;
+  -webkit-transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+.active-tool .disc-title {
+  padding-bottom: 6px;
+  -webkit-transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+.active-tool .artist-name {
+  opacity: 0;
+  height: 2px;
+  -webkit-transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
