--- a/public/stylesheet/show-case.css
+++ b/public/stylesheet/show-case.css
@@ -73,29 +73,6 @@
   text-decoration: none;
 }
 
-.album-name {
-   font-weight: bold;
-   white-space: nowrap;
-   overflow: hidden;
-   text-overflow: ellipsis;
-   margin: 0px 0px 2px 0px;
-   color: #333;
-}
-
-.artist-name {
-  opacity: 1;
-  margin: 0px 0px 2px 0px;
-  color: #888;
-  font-size: 15px;
-  line-height: 1em;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  -webkit-transition: all 0.2s ease-in;
-  -moz-transition: all 0.2s ease-in;
-  transition: all 0.2s ease-in;
-}
-
 .app-folders-container {
   width: 100%;
   margin: 0 auto;
@@ -157,6 +134,7 @@
    transition: all 0.2s ease-in;
 }
 .disc-title {
+   font-weight: bold;
    font-size: 1em;
    line-height: 1.5em;
    margin: 10px 0px 5px 0px;
@@ -235,4 +213,11 @@
 }
 .disc-folder-content a:hover {
   text-decoration: underline;
+}
+.disc-cover-detail img {
+   position: relative;
+   z-index: -2;
+   display: block;
+   width: 100%;
+   max-width: 300px;
 }
