--- a/public/stylesheet/show-case.css
+++ b/public/stylesheet/show-case.css
@@ -192,18 +192,33 @@
    box-sizing: border-box;
    min-width: 320px;
    padding: 20px 0 0 60px;
-   background-color: rgb(0, 0, 0);
-   border: 1px solid rgba(0,0,0,0.3);
+   background-color: rgb(9, 8, 9);
+   border: 1px solid rgba(0, 0, 0, 0.3);
    border-width: 1px 0;
+}
+.disc-folder-content h2 {
+   display: block;
+   font-size: 1.5em;
+   -webkit-margin-before: 0.83em;
+   -webkit-margin-after: 0.83em;
+   -webkit-margin-start: 0px;
+   -webkit-margin-end: 0px;
+   font-weight: bold;
+   margin-bottom: 0;
 }
 .disc-folder-content a:hover {
    text-decoration: underline;
 }
 .disc-cover-detail {
-   -moz-box-shadow: rgb(0, 0, 0) 12px 15px 20px inset, rgb(0, 0, 0) -1px -1px 150px inset;
-   -webkit-box-shadow: rgb(0, 0, 0) 12px 15px 20px inset, rgb(0, 0, 0) -1px -1px 150px inset;
-   box-shadow: rgb(0, 0, 0) 12px 15px 20px inset, rgb(0, 0, 0) -1px -1px 150px inset;
+   -moz-box-shadow: rgb(9, 8, 9) 12px 15px 20px inset, rgb(9, 8, 9) -1px -1px 150px inset;
+   -webkit-box-shadow: rgb(9, 8, 9) 12px 15px 20px inset, rgb(9, 8, 9) -1px -1px 150px inset;
+   box-shadow: rgb(9, 8, 9) 12px 15px 20px inset, rgb(9, 8, 9) -1px -1px 150px inset;
 }
 .disc-cover-detail img {
+   z-index: -2;
+   position: relative;
    max-width: 300px;
+}
+.primary-color {
+   color: rgb(198, 202, 198);
 }
