--- a/public/stylesheet/show-case.css
+++ b/public/stylesheet/show-case.css
@@ -194,6 +194,7 @@
 }
 .disc-folder-content h2 {
    display: block;
+   line-height: 1.5em;
    font-size: 1.5em;
    font-weight: bold;
    margin-bottom: 0;
@@ -202,7 +203,8 @@
    margin: 0 0 20px;
    font-weight: normal;
    display: block;
-   font-size: 1.17em;
+   line-height: 1.2em;
+   font-size: 1.2em;
    font-weight: bold;
 }
 .disc-folder-content a:hover {
