--- a/public/stylesheet/show-case.css
+++ b/public/stylesheet/show-case.css
@@ -24,37 +24,7 @@
   cursor: pointer;
 }
 
-.folder::before {
-  position: absolute;
-  bottom: -1px;
-  left: 50%;
-  content: '';
-  width: 0;
-  height: 0;
-  margin-left: 7px;
-  border-left: 0 solid transparent;
-  border-right: 0 solid transparent;
-  border-bottom: 0 solid transparent;
-  -webkit-transition: bottom 0.2s ease-in;
-  -moz-transition: bottom 0.2s ease-in;
-  transition: bottom 0.2s ease-in;
-}
 
-.folder::after {
-  position: absolute;
-  bottom: -1px;
-  left: 50%;
-  content: '';
-  width: 0;
-  height: 0;
-  margin-left: 6px;
-  border-left: 0 solid transparent;
-  border-right: 0 solid transparent;
-  border-bottom: 0 solid transparent;
-  -webkit-transition: bottom 0.2s ease-in;
-  -moz-transition: bottom 0.2s ease-in;
-  transition: bottom 0.2s ease-in;
-}
 
 .folder img {
   position: relative;
@@ -134,6 +104,37 @@
    -webkit-transition: all 0.2s ease-in;
    -moz-transition: all 0.2s ease-in;
    transition: all 0.2s ease-in;
+}
+.disc-cover-folder::before {
+  position: absolute;
+  bottom: -1px;
+  left: 50%;
+  content: '';
+  width: 0;
+  height: 0;
+  margin-left: 7px;
+  border-left: 0 solid transparent;
+  border-right: 0 solid transparent;
+  border-bottom: 0 solid transparent;
+  -webkit-transition: bottom 0.2s ease-in;
+  -moz-transition: bottom 0.2s ease-in;
+  transition: bottom 0.2s ease-in;
+}
+
+.disc-cover-folder::after {
+  position: absolute;
+  bottom: -1px;
+  left: 50%;
+  content: '';
+  width: 0;
+  height: 0;
+  margin-left: 6px;
+  border-left: 0 solid transparent;
+  border-right: 0 solid transparent;
+  border-bottom: 0 solid transparent;
+  -webkit-transition: bottom 0.2s ease-in;
+  -moz-transition: bottom 0.2s ease-in;
+  transition: bottom 0.2s ease-in;
 }
 .active-tool {
    z-index: 10;
