--- a/public/stylesheet/show-case.css
+++ b/public/stylesheet/show-case.css
@@ -187,4 +187,15 @@ a.primary-color, a.primary-color:hover {
    border-style: solid;
    border-width: 0 12.5px 15px 12.5px;
    border-color: transparent transparent rgb(9, 8, 9) transparent;
+   position: relative;
+   z-index: 10;
+   top: 2px;
+   left: 45%;
+   opacity: 0;
+}
+.active-tool .crrent-indicator {
+  opacity: 1;
+  -webkit-transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
 }
