--- a/public/stylesheet/show-case.css
+++ b/public/stylesheet/show-case.css
@@ -185,13 +185,16 @@ a.primary-color, a.primary-color:hover {
    width: 0px;
    height: 0px;
    border-style: solid;
-   border-width: 0 12.5px 15px 12.5px;
+   border-width: 0 15px 15px 15px;
    border-color: transparent transparent rgb(9, 8, 9) transparent;
    position: relative;
    z-index: 10;
    top: 2px;
    left: 45%;
    opacity: 0;
+   -webkit-transition: all 0.2s ease-in;
+   -moz-transition: all 0.2s ease-in;
+   transition: all 0.2s ease-in;
 }
 .active-tool .crrent-indicator {
   opacity: 1;
