--- a/public/stylesheet/show-case.css
+++ b/public/stylesheet/show-case.css
@@ -185,14 +185,21 @@ a.primary-color, a.primary-color:hover {
    width: 0px;
    height: 0px;
    border-style: solid;
-   border-width: 0 15px 15px 15px;
+   border-width: 0 50px 50px 50px;
    border-color: transparent transparent rgb(9, 8, 9) transparent;
    position: relative;
-   top: 2px;
+   top: 20px;
    z-index: 10;
    left: 45%;
    opacity: 0;
+   -webkit-transition: all 0.2s ease-in;
+   -moz-transition: all 0.2s ease-in;
+   transition: all 0.2s ease-in;
 }
 .active-tool .crrent-indicator {
+   top: 2px;
    opacity: 1;
+   -webkit-transition: all 0.2s ease-in;
+   -moz-transition: all 0.2s ease-in;
+   transition: all 0.2s ease-in;
 }
