--- a/public/stylesheet/show-case.css
+++ b/public/stylesheet/show-case.css
@@ -195,8 +195,8 @@ a.primary-color, a.primary-color:hover {
    width: 0px;
    height: 0px;
    border-style: solid;
-   border-width: 0 31px 31px 31px;
-   border-color: transparent transparent rgb(0, 0, 0) transparent;
+   border-width: 0 30px 30px 30px;
+   border-color: transparent transparent rgb(0, 0, 0, 0.3) transparent;
    position: relative;
    top: 60px;
    z-index: 0;
@@ -212,8 +212,7 @@ a.primary-color, a.primary-color:hover {
    transition: all 0.2s ease-in;
 }
 .active-tool .current-indicator-back {
-   top: 2px;
-   z-index: -2;
+   top: -29px;
    opacity: 1;
    -webkit-transition: all 0.2s ease-in;
    -moz-transition: all 0.2s ease-in;
